<resources>
    <string name="app_name">I2</string>
    <string name="follow_me">FOLLOW ME</string>
    <string name="show_all_comments">Show all Comments</string>
    <string name="add_to_groupe">Add to Groupe</string>
    <string name="_222_202_202">+222 202 202</string>
    <string name="william_gmail_com">William@gmail.com</string>
    <string name="_520">520</string>
    <string name="_2254">2254</string>
    <string name="_160">160</string>
    <string name="folowing">Folowing</string>
    <string name="followers">Followers</string>
    <string name="photos">Photos</string>
    <string name="william_snoe">WILLIAM SNOE</string>
</resources>