<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

        <!-- Blue Upper Part -->

        <!-- Rest of the Elements -->
        <LinearLayout
            android:id="@+id/upperPartLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#00BCD4"
            android:orientation="vertical"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">

            <!-- Profile Image and Name -->

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/download"
                    android:background="@drawable/download"/>


                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/william_snoe"
                    android:textColor="#ffff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Round Rectangle -->
            </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upperPartLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:backgroundTint="#234235">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photos"
                        android:textStyle="bold"
                        android:textColor="#808080"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/nr_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2254"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photos"
                        android:textStyle="bold"
                        android:textColor="#808080"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/nr_photos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2254"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photos"
                        android:textStyle="bold"
                        android:textColor="#808080"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/nr_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2254"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/textView55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/william_gmail_com"
                android:textColor="#808080"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-55dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/_222_202_202"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#808080" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-55dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/add_to_groupe"
                android:textColor="#808080"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-55dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/show_all_comments"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#808080"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/follow_me" />

        </LinearLayout>



    <!-- Follow Me Button -->


</androidx.constraintlayout.widget.ConstraintLayout>